--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -8,7 +8,9 @@ jobs:
   Indentation:
     name: Clang Formatting Check
     runs-on: ubuntu-latest
-    container: ghcr.io/gyselax/gyselalibxx_env
+    container:
+      image: ghcr.io/gyselax/gyselalibxx_env
+      options: --user root
     steps:
       - uses: actions/checkout@v3
       - shell: bash
@@ -37,7 +39,9 @@ jobs:
   Python:
     name: Python Best Practices
     runs-on: ubuntu-latest
-    container: ghcr.io/gyselax/gyselalibxx_env
+    container:
+      image: ghcr.io/gyselax/gyselalibxx_env
+      options: --user root
     steps:
       - uses: actions/checkout@v3
       - name: Run pylint
@@ -62,7 +66,9 @@ jobs:
   Documentation:
     name: Doxygen generation
     runs-on: ubuntu-latest
-    container: ghcr.io/gyselax/gyselalibxx_env
+    container:
+      image: ghcr.io/gyselax/gyselalibxx_env
+      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
