--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -50,7 +50,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          recursive: true
+          submodules: true
       - name: Run pylint
         run: |
           pylint $(find tests -iname *.py)
@@ -84,7 +84,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          recursive: true
+          submodules: true
       - name: Make documenation
         run: |
           # Make docs
