--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -51,6 +51,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Run pylint
         run: |
           pylint $(find tests -iname *.py)
           pylint $(find doc -iname *.py)
