Try to mark as safe

--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -95,6 +95,7 @@ jobs:
         shell: bash
       - name: Check for new errors
         run: |
+          git config --global --add safe.directory /__w/gyselalibxx/gyselalibxx
           git branch
           git branch -r
           echo "1"
