--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -99,6 +99,10 @@ jobs:
           git branch
           git branch -r
           echo "1"
+          git show ${{ github.event.pull_request.base.sha }}
+          echo "1"
+          git show ${{ github.event.pull_request.head.sha }}
+          echo "1"
           # Get files which have changed in this merge request
           git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color --no-index
           echo "2"
