--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -104,12 +104,12 @@ jobs:
           git show ${{ github.event.pull_request.head.sha }}
           echo "1"
           # Get files which have changed in this merge request
-          git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color --no-index
+          git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color
           echo "2"
           # Filter documentation messages to only complain about modified files
           python3 ci_tools/check_documentation.py pull_diff.txt build/docs/doxygen.log
           echo "3"
-          git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A --no-index
+          git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
           echo "4"
           python3 ci_tools/check_readme_presence.py pull_new_files.txt
         shell: bash
