--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -4,6 +4,21 @@ on:
   pull_request:
 
 jobs:
+  tests_Debug:
+    if: ${{ github.run_attempt }} > 1
+    uses: ./.github/workflows/filtered_tests.yml
+    with:
+      additional_cmake_commands: -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON
+      ctest_commands: -LE test_on_Release_only
+      filter_tests: true
+
+  tests_Release:
+    if: ${{ github.run_attempt }} > 1
+    uses: ./.github/workflows/filtered_tests.yml
+    with:
+      additional_cmake_commands: -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release
+      filter_tests: true
+
   Indentation:
     name: Clang Formatting Check
     runs-on: ubuntu-latest
@@ -55,7 +70,7 @@ jobs:
           pylint $(find tests -iname *.py)
           pylint $(find doc -iname *.py)
           pylint $(find ci_tools -iname *.py)
-        shell: bash
+        hell: bash
         env:
           PYTHONPATH: ./post-process/PythonScripts
       - name: Run filtered pylint
