--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,116 +1,50 @@
-name: Docker update and test
+name: Functionality tests
 
 on:
-  push:
-    branches:
-    - 'main'
-  pull_request:
+  workflow_call:
+    inputs:
+      additional_cmake_commands:
+        description: 'Any additional commands/flags which should be passed to cmake'
+        default: ''
+        required: false
+        type: string
+      ctest_commands:
+        description: 'Any additional commands/flags which should be passed to ctest'
+        default: ''
+        required: false
+        type: string
+      filter_tests:
+        description: 'Indicates whether tests should be filtered to reduce the quantity'
+        required: true
+        type: bool
 
 jobs:
-  docker:
+    tests:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push to tag
-        uses: docker/build-push-action@v3
-        with:
-          context: ./docker/gyselalibxx_env
-          cache-from: type=registry,ref=ghcr.io/gyselax/gyselalibxx_env:latest
-          pull: true
-          push: true
-          tags: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
-      - name: Build and push latest
-        if: github.event_name == 'push' && github.ref_name == 'main'
-        uses: docker/build-push-action@v3
-        with:
-          context: ./docker/gyselalibxx_env
-          cache-from: type=registry,ref=ghcr.io/gyselax/gyselalibxx_env:latest
-          pull: true
-          push: true
-          tags: ghcr.io/gyselax/gyselalibxx_env:latest
-
-  tests:
-    runs-on: ubuntu-latest
-    needs: docker
     container:
-      image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
+      image: ghcr.io/gyselax/gyselalibxx_env
       options: --user root
     steps:
       - name: Checkout gyselalibxx
         uses: actions/checkout@v3
-        with: { submodules: recursive }
-      - name: Run tests
-        run: |
-          mkdir build
-          cd build
-          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-          make -j 2 VERBOSE=1
-          ctest --output-on-failure --timeout 5 -LE test_on_Release_only
-
-  tests_Release:
-    runs-on: ubuntu-latest
-    needs: docker
-    container:
-      image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
-      options: --user root
-    steps:
-      - name: Checkout gyselalibxx
-        uses: actions/checkout@v3
-        with: { submodules: recursive }
-      - name: Run tests
-        run: |
-          mkdir build
-          cd build
-          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-          make -j 2 VERBOSE=1
-          ctest --output-on-failure --timeout 5
-
-  Docs:
-    if: github.event_name == 'push' && github.ref_name == 'main'
-    needs: docker
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
-      options: --user root
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
         with:
-          path: code_branch
-          submodules: recursive
-      - name: Checkout documentation
-        uses: actions/checkout@v3
+          submodules: true
+      - uses: dorny/paths-filter@v2
+        id: changes
         with:
-          ref: documentation
-          path: doc_branch
-      - name: Generate docs
-        run: |
-          mkdir build
-          cd build
-          cmake -DBUILD_DOCUMENTATION=ON ../code_branch
-          make doc
-        shell: bash
-      - name: Update documentation
-        run: |
-          cd doc_branch
-          git rm -r *
-          cp -r ../build/docs/html/* .
-          git add .
-          git config --global user.name "GitHub CI Documentation builder"
-          git config --global user.email "username@users.noreply.github.com"
-          git commit -m "Update docs" || true
-          git push
-        shell: bash
-        env:
-          GH_TOKEN: ${{ github.token }}
+          filters: |
+            sll:
+              - 'vendor/sll/**'
+            poisson_2d:
+              - 'src/geometryRTheta/poisson/**'
+      - uses: .github/actions/functionality_tests
+        with:
+          additional_cmake_commands: ${{ inputs.additional_cmake_commands }}
+          ctest_commands: ${{ inputs.ctest_commands }}
+          SLL_BUILD_TESTING: ${{ inputs.filter_tests && steps.changes.outputs.sll || 'ON' }}
+          POISSON_2D_TESTING: ${{ inputs.filter_tests && steps.changes.outputs.poisson_2d || 'ON' }}
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: 'build/tests.xml'
