--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,11 +33,12 @@ jobs:
         if: inputs.manual && github.run_attempt == 1
         run: |
           # GitHub CLI api https://cli.github.com/manual/gh_api
-          gh api \
-            --method POST \
+          curl -L \
+            -X POST \
             -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${GH_TOKEN}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
+            https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
         env:
           GH_TOKEN: ${{ github.token }}
         shell: bash
