--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,12 +71,17 @@ jobs:
           SLL_BUILD_TESTING: ${{ inputs.filter_tests && steps.changes.outputs.sll || 'ON' }}
           POISSON_2D_TESTING: ${{ inputs.filter_tests && steps.changes.outputs.poisson_2d || 'ON' }}
         shell: bash
+        working-directory: ./build
       - name: 'Compilation'
         run: |
           make -j VERBOSE=1
+        shell: bash
+        working-directory: ./build
       - name: 'Run tests'
         run: |
           ctest --output-on-failure --timeout 5 --output-junit tests.xml ${{ inputs.ctest_commands }}
+        shell: bash
+        working-directory: ./build
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v4
         if: always() # always run even if the previous step fails
