--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,10 @@ on:
         default: ''
         required: false
         type: string
-      filter_tests:
-        description: 'Indicates whether tests should be filtered to reduce the quantity'
-        required: true
-        type: boolean
-      manual:
-        description: 'Indicates whether tests should be triggered manually'
-        required: true
-        type: boolean
+      filter_tests_base:
+        description: 'Indicates the base against which a filter should be applied'
+        required: false
+        type: string
 
 jobs:
   tests:
@@ -29,21 +25,6 @@ jobs:
       image: ghcr.io/gyselax/gyselalibxx_env
       options: --user root
     steps:
-      - name: Auto-cancel manual tests
-        if: inputs.manual && github.run_attempt == 1
-        run: |
-          apt-get update
-          apt-get install curl
-          # GitHub CLI api https://cli.github.com/manual/gh_api
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${GH_TOKEN}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
-        env:
-          GH_TOKEN: ${{ github.token }}
-        shell: bash
       - name: Checkout gyselalibxx
         uses: actions/checkout@v3
         with:
@@ -56,6 +37,7 @@ jobs:
               - 'vendor/sll/**'
             poisson_2d:
               - 'src/geometryRTheta/poisson/**'
+          base: ${{ inputs.filter_tests_base }}
       - name: 'Setup'
         run:
           mkdir build
