--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -10,13 +10,19 @@ jobs:
     steps:
       - name: Checkout gyselalibxx
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Get base for PR
         run: |
           pr_id=$(gh pr view test_pr --json number -q '.["number"]')
           echo "PR_ID = $pr_id"
-          base_sha=$(gh api -H "Accept: application/vnd.github+json" \
-                            -H "X-GitHub-Api-Version: 2022-11-28" \
-                            /repos/${{ github.repository }}/pulls/${pr_id} -q '.["base"]["sha"]')
+          if [ "$?" -eq "0" ]; then
+            base_sha=$(gh api -H "Accept: application/vnd.github+json" \
+                              -H "X-GitHub-Api-Version: 2022-11-28" \
+                              /repos/${{ github.repository }}/pulls/${pr_id} -q '.["base"]["sha"]')
+          else
+            base_sha=$(git log main -1 --format=%H)
+          fi
           echo "base_sha = ${base_sha}"
           echo "BASE=${base_sha}" >> $GITHUB_OUTPUTS
         shell: bash
