--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -17,8 +17,9 @@ jobs:
           current_branch=$(git branch --show-current)
           echo "Currently on ${current_branch}"
           pr_id=$(gh pr view ${current_branch} --json number -q '.["number"]')
-          echo "PR_ID = $pr_id"
-          if [ "$?" -eq "0" ]; then
+          found_pr_id=$?
+          echo "PR_ID = $pr_id (found=${found_pr_id})"
+          if [ "${found_pr_id}" -eq "0" ]; then
             base_sha=$(gh api -H "Accept: application/vnd.github+json" \
                               -H "X-GitHub-Api-Version: 2022-11-28" \
                               /repos/${{ github.repository }}/pulls/${pr_id} -q '.["base"]["sha"]')
