--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-          set-safe-directory: true
+      - name: Set safe directories
+        run: |
+          git config --global --add safe.directory .
+        shell: bash
       - uses: dorny/paths-filter@v2
         id: changes
         with:
