--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gyselax/gyselalibxx_env
-      options: --user="$(id --user):$(id --group)"
+      options: --user=1001
     steps:
       - name: Checkout gyselalibxx
         uses: actions/checkout@v4
