Use runner id to avoid safe.directory issues

--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gyselax/gyselalibxx_env
-      options: --user root
+      options: --user 1001
     steps:
       - uses: actions/checkout@v3
       - shell: bash
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gyselax/gyselalibxx_env
-      options: --user root
+      options: --user 1001
     steps:
       - uses: actions/checkout@v3
         with:
@@ -79,7 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gyselax/gyselalibxx_env
-      options: --user root
+      options: --user 1001
     steps:
       - uses: actions/checkout@v3
         with:
@@ -96,7 +96,6 @@ jobs:
         shell: bash
       - name: Check for new errors
         run: |
-          git config --global --add safe.directory $(pwd)
           # Get files which have changed in this merge request
           git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color
           # Filter documentation messages to only complain about modified files
