--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ on:
         type: string
       filter_tests_base:
         description: 'Indicates the base against which a filter should be applied'
+        default: ''
         required: false
         type: string
 
@@ -52,11 +53,12 @@ jobs:
               -DPOISSON_2D_BUILD_TESTING=${POISSON_2D_TESTING} \
               ..
         env:
-          SLL_BUILD_TESTING: ${{ inputs.filter_tests_base && steps.changes.outputs.sll || 'ON' }}
-          POISSON_2D_TESTING: ${{ inputs.filter_tests_base && steps.changes.outputs.poisson_2d || 'ON' }}
+          SLL_BUILD_TESTING: ${{ inputs.filter_tests_base != '' && steps.changes.outputs.sll || 'ON' }}
+          POISSON_2D_TESTING: ${{ inputs.filter_tests_base != '' && steps.changes.outputs.poisson_2d || 'ON' }}
         shell: bash
         working-directory: ./build
       - name: 'Compilation'
+        id: compilation
         run: |
           make -j VERBOSE=1
         shell: bash
@@ -68,6 +70,6 @@ jobs:
         working-directory: ./build
       #- name: Publish Test Report
       #  uses: mikepenz/action-junit-report@v4
-      #  if: always() # always run even if the previous step fails
+      #  if: steps.compilation.outcome != 'success'
       #  with:
       #    report_paths: 'build/tests.xml'
