Remove costly use of SplineChargeDensityCalculator

--- a/tests/geometryXVx/CMakeLists.txt
+++ b/tests/geometryXVx/CMakeLists.txt
@@ -78,6 +78,7 @@ foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 	add_executable(spline_quadrature_tests_${GEOMETRY_VARIANT}
 	    ../main.cpp
 	    quadrature_spline.cpp
+	    neumann_quadrature_spline.cpp
 	)
 	target_compile_features(spline_quadrature_tests_${GEOMETRY_VARIANT} PUBLIC cxx_std_17)
 	target_link_libraries(spline_quadrature_tests_${GEOMETRY_VARIANT}
