--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,7 +59,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: ghcr.io/gyselax/gyselalibxx_env
-          options: -v ${{ github.workspace }}:/work -e
+          options: -v ${{ github.workspace }}:/work
           run: |
             cd /work/build
             cmake ${{ inputs.additional_cmake_commands }} \
