--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,13 +55,10 @@ jobs:
           ls
           echo ${{ github.workspace }}
         shell: bash
-      - name: Run the build process with Docker # https://aschmelyun.com/blog/using-docker-run-inside-of-github-actions/
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ghcr.io/gyselax/gyselalibxx_env
-          options: -v ${{ github.workspace }}:/work
-          run: |
-            cd /work/build
+      - name: Run the build process with Docker
+        run: |
+          cat<<-EOF > run.sh
+            set -xe
             cmake ${{ inputs.additional_cmake_commands }} \
                 -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF \
                 -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 \
@@ -70,7 +67,10 @@ jobs:
                 ..
             make -j VERBOSE=1
             ctest --output-on-failure --timeout 5 --output-junit tests.xml ${{ inputs.ctest_commands }}
-          shell: bash
+          EOF
+          docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env bash /src/run.sh --user 1001 -e "SLL_BUILD_TESTING" -e "POISSON_2D_TESTING"
+        continue-on-error: true
+
       #- name: Publish Test Report
       #  uses: mikepenz/action-junit-report@v4
       #  if: steps.compilation.outcome != 'success'
